# param-tatva-sim

./: .gitignore  .pre-commit-config.yaml  21Weeks.md  404.html  CNAME  Makefile  ParamTatva.md  ParamTatva2.md  README.md  Roadmap.md  gen__kernel_anime.py  gen__kernel_viz.py  generate_ptk_artifacts.py  index.html  mkdocs.yml  param_tatva_from_maheshwara_sutra.md  project_code.json  ptk.layout.json  ptk_emission_result.json  ptk_pydantic_validator.py  ptk_rust.rs  ptk_rust_tests.rs  pyproject.toml  requirements-dev.txt  sitemap.xml  validate_ptk_schema.py  walker.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  (+4 more)
.history/: README_20250923150213.md  README_20250923184701.md
configs/: demo_electron.yaml  demo_electron_accurate.yaml
detector/: geometry.yaml
docs/: index.md
kernel/: ptk.v1.json  ptk.v1.schema.json
notebooks/: Kernel_Conservation_Report.ipynb
pt-core/: Cargo.toml  maheshwara_sutras_graph.json
pt-core/.cargo/: config.toml
pt-core/benches/: core_bench.rs
pt-core/src/: compact.rs  lib.rs  params.rs  potentials.rs  pybindings.rs  spectrum.rs  states.rs  utils.rs
pt-core/tests/: compact_tests.rs  potentials_tests.rs
pt-sim/: README.md  pyproject.toml
pt-sim/param_tatva_sim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pt-sim/pt_sim/: __init__.py  demo_electron_ecal.py  demo_forces.py  demo_run.py  fastcore.py  paramsutra.py  ptk_kernel.py
pt-sim/pt_sim.egg-info/: PKG-INFO  SOURCES.txt
pt-sim/pt_sim/core/: ledger.py  rng.py
pt-sim/pt_sim/detector/: bridge.py  digitize.py  geometry.py  run_from_kernel.py
pt-sim/pt_sim/forces/: analytic.py  boris.py  em.py  gauge.py  potentials.py  qcd_toy.py
pt-sim/pt_sim/io/: hepmc.py  rootio.py
pt-sim/pt_sim/physics/: accurate.py  simplified.py
pt-sim/tests/: test_digitization_pipeline.py  test_geometry_mapper.py  test_geometry_yaml_load.py  test_ledger.py  test_rng_repro.py
pt-sim/tools/: demo_run.py
reports/: 25-Sept-2025.md
schemas/: ptk.v1.schema.json
search/: search_index.json
tests/: test_boris.py  test_detector_bridge.py  test_em_shower_energy.py  test_energy_conservation.py  test_io_stubs.py  test_kernel_emission.py  test_kernel_wiring.py
tools/: ptk_draw_svg.py  ptk_illustration_16x9.py  run_emission.py  sweep.py  viz_overlay.py
(+33 files in other folders)
