[build-system]
requires=['setuptools>=61.0']
build-backend='setuptools.build_meta'
[project]
name='pt-sim'
version='0.1.0'

 

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
extend-select = ["E", "F"]

[project.optional-dependencies]
test = [
  "pytest>=7",
  "numpy>=1.23",
  "matplotlib>=3.7",
  "scipy>=1.10",
]


[tool.ruff.lint]
ignore = ["E701","E501"]